policies/apparmor-profile-initcontainers.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-apparmor-profile-initcontainers
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  variables:
    - name: allowedAppArmorTypes
      expression: >
        ["RuntimeDefault","Localhost"]
  validations:
    - expression: >
        !has(object.spec.initContainers) ||
        object.spec.initContainers.all(ic,
          !has(ic.securityContext) ||
          !has(ic.securityContext.appArmorProfile) ||
          !has(ic.securityContext.appArmorProfile.type) ||
          variables.allowedAppArmorTypes.exists(t, t == ic.securityContext.appArmorProfile.type)
        )
      message: >
        spec.initContainers[*].securityContext.appArmorProfile.type must be undefined, RuntimeDefault, or Localhost.
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-apparmor-profile-initcontainers-namespace-optout-warn
spec:
  policyName: check-apparmor-profile-initcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/apparmor-profile-initcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-apparmor-profile-initcontainers-namespace-optin-warn
spec:
  policyName: check-apparmor-profile-initcontainers
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: apparmor-profile-initcontainers.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-apparmor-profile-initcontainers-namespace-optout-audit
spec:
  policyName: check-apparmor-profile-initcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/apparmor-profile-initcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-apparmor-profile-initcontainers-namespace-optin-audit
spec:
  policyName: check-apparmor-profile-initcontainers
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: apparmor-profile-initcontainers.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-apparmor-profile-initcontainers-namespace-optout-deny
spec:
  policyName: check-apparmor-profile-initcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["baseline","restricted"]
        - key: validating-admission-policies.kolteq.com/apparmor-profile-initcontainers
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-apparmor-profile-initcontainers-namespace-optin-deny
spec:
  policyName: check-apparmor-profile-initcontainers
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: apparmor-profile-initcontainers.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
